--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "wikifier"
+name = "wikify"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 clap = { version = "3.2.20", features = ["derive"] }
 markdown-it = "0.2.0"
+itertools = "0.10.4"
